Made change to index.html
added anchor, linking to gitub qwik-list page, to the shopping-list display in the portfolio section.

--- a/index.html
+++ b/index.html
@@ -184,12 +184,14 @@
                 </a>
               </div>
               <div class="display">
-                <div class="box-wrapper">
-                  <div class="display-title">
-                    <h3>shopping <br>list</h3>
+                <a href="https://github.com/andrew-oyanguren/qwik-list">
+                  <div class="box-wrapper">
+                    <div class="display-title">
+                      <h3>shopping <br>list</h3>
+                    </div>
+                    <p>css | html | javascript</p>
                   </div>
-                  <p>css | html | javascript</p>
-                </div>
+                </a>
               </div>
             </div>
           </div>
