Added the target tag

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </a>
               </div>
               <div class="display">
-                <a href="https://github.com/andrew-oyanguren/qwik-list">
+                <a href="https://github.com/andrew-oyanguren/qwik-list" target="_blank">
                   <div class="box-wrapper">
                     <div class="display-title">
                       <h3>shopping <br>list</h3>
